<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="kr.smart.carefarm.scene.planting.PlantingActivity" />

        <variable
            name="model"
            type="kr.smart.carefarm.scene.planting.PlantingViewModel" />
    </data>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        style="@style/Widget.MaterialComponents.NavigationView"
        android:layout_width="265dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nav_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0">

                <LinearLayout
                    android:id="@+id/ll_header"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="left|center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/line_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/icon_farmer" />
                    <TextView
                        android:id="@+id/tv_user_name"
                        style="@style/TextViewStyle_Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:textColor="@color/font_side_menu_name"
                        android:textSize="20dp" />

                </LinearLayout>
                <View
                    android:id="@+id/line_header"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/color_side_menu_line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_header"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/layout_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_logout">

                <LinearLayout
                    android:id="@+id/ll_reg_crop"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:onClick="@{view::onClick}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_header">


                    <TextView
                        android:id="@+id/tv_content"
                        style="@style/TextViewStyle_Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/reg_crop_title"
                        android:textColor="@color/font_planting"
                        android:textSize="15dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_line_bg"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
                <LinearLayout
                    android:id="@+id/ll_reg_farming_log"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:onClick="@{view::onClick}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_header">


                    <TextView
                        android:id="@+id/tv_reg_farming_log"
                        style="@style/TextViewStyle_Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/reg_farming_log"
                        android:textColor="@color/font_planting"
                        android:textSize="15dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_line_bg"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
                <LinearLayout
                    android:id="@+id/ll_reg_farming_plan"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:onClick="@{view::onClick}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_header">


                    <TextView
                        android:id="@+id/tv_reg_farming_plan"
                        style="@style/TextViewStyle_Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/reg_farming_plan"
                        android:textColor="@color/font_planting"
                        android:textSize="15dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_line_bg"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <LinearLayout
                    android:id="@+id/ll_app_version"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:onClick="@{view::onClick}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_header">


                    <TextView
                        style="@style/TextViewStyle_Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/side_app_version"
                        android:textColor="@color/font_planting"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/tv_app_version"
                        style="@style/TextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical|right"
                        android:layout_weight="1"
                        android:textColor="@color/font_planting"
                        android:textSize="10dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_line_bg"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <TextView
                style="@style/TextViewStyle_Medium"
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/drawer_btn_logout"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/font_normal"
                android:background="@color/color_btn"
                android:onClick="@{view::onClick}"
                app:layout_constraintTop_toBottomOf="@id/ll_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>
</layout>